Adds design system and user profile and user page.
